--- a/index.html
+++ b/index.html
@@ -5,40 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
 
 <body ng-controller='mainCtrl'>
 
-    <div class='allEmployeeContainer'>
+    <div class='navbar'>
+        <h3>Employee Database </h3>
+    </div>
+    <div class='allStatusFilter'>
+        Search Employees of All Statuses: <input ng-model='allStatusFilter'>
+    </div>
 
-        
-        <div class='newEmployeeContainer'>
-            <h1>New Hires:</h1>
-            <div ng-repeat='employee in newEmployees'>
+
+    <div class='allEmployeeContainer'>
+        <div class='employeeBoxes'>
+            Search New Hires: <input ng-model='newEmployeeFilter'>
+
+            <h3>New Hires:</h3>
+            <div ng-repeat='employee in newEmployees | filter: newEmployeeFilter | filter: allStatusFilter'>
                 <img src='{{employee.picture}}' alt='{{employee.first_name}}'>
                 <h3>NAME: {{employee.first_name}} {{employee.last_name}}</h3>
                 <p>DEPARTMENT: {{employee.department}}</p>
                 <p>JOB TITLE: {{employee.job_title}}</p>
                 <p>EMAIL: {{employee.email}}</p>
                 <p>SSN: {{employee.ssn}}</p>
+                <button>Training Completed</button>
             </div>
+
         </div>
-        <div class='currentEmployeeContainer'>
-            <h1>Employed:</h1>
-            <div ng-repeat='employee in employees'>
+        <div class='employeeBoxes'>
+
+            Search Employees: <input ng-model='employeeFilter'>
+            <h3>Employed:</h3>
+            <div ng-repeat='employee in employees | filter: employeeFilter | filter: allStatusFilter'>
                 <img src='{{employee.picture}}' alt='{{employee.first_name}}'>
                 <h3>NAME: {{employee.first_name}} {{employee.last_name}}</h3>
                 <p>DEPARTMENT: {{employee.department}}</p>
                 <p>JOB TITLE: {{employee.job_title}}</p>
                 <p>EMAIL: {{employee.email}}</p>
                 <p>SSN: {{employee.ssn}}</p>
+                <button>Terminate Employee</button>
             </div>
         </div>
-        <div class='terminatedEmployeeContainer'>
-            <h1>Terminated:</h1>
-            <div ng-repeat='employee in terminatedEmployees'>
+        <div class='employeeBoxes'>
+            Search Terminated: <input ng-model='terminatedFilter'>
+            <h3>Terminated:</h3>
+            <div ng-repeat='employee in terminatedEmployees | filter: terminatedFilter | filter: allStatusFilter'>
                 <img src='{{employee.picture}}' alt='{{employee.first_name}}'>
                 <h3>NAME: {{employee.first_name}} {{employee.last_name}}</h3>
                 <p>DEPARTMENT: {{employee.department}}</p>
