--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Search Employees of All Statuses: <input ng-model='allStatusFilter'>
     </div>
 
-    <div class='addNewHireContainer'>
+    <!-- <div class='addNewHireContainer'>
 
         <span> 
         Firstname: <input ng-model='newHire.first_name'>
@@ -42,7 +42,7 @@
     </span>
         <span>
         <button ng-click="addNewHire(newHire)">Add Employee</button>
-    </div>
+    </div> -->
 
 
 
@@ -57,8 +57,8 @@
                 <p>DEPARTMENT: {{employee.department}}</p>
                 <p>JOB TITLE: {{employee.job_title}}</p>
                 <p>EMAIL: {{employee.email}}</p>
-                <p>SSN: {{employee.ssn}}</p>
-                <button ng-click='makeEmployee(employee.ssn)'>Training Completed</button>
+                <!-- <p>SSN: {{employee.ssn}}</p> -->
+                <!-- <button ng-click='makeEmployee(employee.ssn)'>Training Completed</button> -->
             </div>
 
         </div>
@@ -72,8 +72,8 @@
                 <p>DEPARTMENT: {{employee.department}}</p>
                 <p>JOB TITLE: {{employee.job_title}}</p>
                 <p>EMAIL: {{employee.email}}</p>
-                <p>SSN: {{employee.ssn}}</p>
-                <button ng-click='terminateEmployee(employee.ssn)'>Terminate Employee</button>
+                <!-- <p>SSN: {{employee.ssn}}</p> -->
+                <!-- <button ng-click='terminateEmployee(employee.ssn)'>Terminate Employee</button> -->
             </div>
         </div>
         <div class='employeeBoxes'>
@@ -85,8 +85,8 @@
                 <p>DEPARTMENT: {{employee.department}}</p>
                 <p>JOB TITLE: {{employee.job_title}}</p>
                 <p>EMAIL: {{employee.email}}</p>
-                <p>SSN: {{employee.ssn}}</p>
-                <button ng-click='rehireEmployee(employee.ssn)'>Re-Hire Employee</button>
+                <!-- <p>SSN: {{employee.ssn}}</p> -->
+                <!-- <button ng-click='rehireEmployee(employee.ssn)'>Re-Hire Employee</button> -->
             </div>
         </div>
     </div>
